Refactor 'checkForNotEmptyAndValidString' to call '.isBlank()' instead of .trim() and then .isEmpty()